--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Team Citron [Yoann, Ali, Luke]",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.0.7"
+    "mongoose": "^5.0.7",
+    "body-parser": "^1.18.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
